--- a/TODO
+++ b/TODO
@@ -3,6 +3,28 @@ time per line. Verify every information and detail before creating fingerprints
 or asking CVEs. Contact project developers in case you need more information.
 This list should be empty so there is a LOT to do.
 
+TODO: Should be a feature to run commands in detected installation directory
+e.g. if /home/example/public_html/ directory contains file php5.fcgi
+TODO: There should be argument for looking specific programs in for example: -s
+joomla,smf
+TODO: Add support to continue interrupted session (Tuomo Komulainen requested).
+Could be implemented using http://docs.python.org/library/atexit.html with
+knowledge of current working directory and queues
+TODO: phpBB3 makes backups(?) in update to location includes/install/update/old,
+which comes up as an result
+TODO: Joomla creates temporary files in update to location
+tmp/install_4ee88b2db4c46, which comes up as an result
+TODO: WordPress open installations CVE-2012-0937 http://osvdb.org/78710 which
+is very bad, because attacker can install the WordPress using remote database
+and after that execute any PHP he/she likes
+TODO: Gallery version string not detected 1.5.10.dfsg-debian1
+
+Data in YAML-files could include following:
+    CVE, CVSS2, OSVDB, Secunia
+    Publication date, Fixed date
+    CPE, ISS X-Force ID
+    SecurityTracker Alert ID, Vendor URL
+
 http://en.wikipedia.org/wiki/List_of_web_application_frameworks
 http://docs.joomla.org/Vulnerable_Extensions_List
 http://ceriksen.com/category/advisories/
